@@ -1,3 +1,10 @@
+2012-05-10 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V02-05-05
+	* limit core dump size to 0 with two or more restarts in a run
+	* parameter crashestoDump unsignedInt can override this value
+	* it detects this using status from the waitpid call
+
 2012-05-02 Srecko morovic <srecko.morovic@cern.ch>
 
 	* tag V02-05-04
